--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ rust:
   - nightly
 
 script:
-  - sh generate-tests.sh
+  - bash generate-tests.sh
   - cargo generate-lockfile
   - sh ci/run-docker.sh $TARGET
   # Travis can't cache files that are not readable by "others"
