--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,14 @@ version = "0.7.0"
 
 [features]
 unproven = []
+serde_svd = ["serde"]
 
 [dependencies]
 either = "1.5"
 xmltree = "0.8"
 failure = "0.1"
+
+[dependencies.serde]
+version = "1.0"
+features = ["derive"]
+optional = true
