--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,10 @@ version = "0.7.0"
 
 [features]
 unproven = []
+serde_svd = ["serde"]
 
 [dependencies]
 either = "1.1.0"
 xmltree = "0.3.2"
 failure = "0.1.1"
+serde = { version = "1.0", features = [ "derive" ], optional = true }
