--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,10 @@ failure = "0.1"
 version = "1.0"
 features = ["derive"]
 optional = true
+
+[dev-dependencies]
+serde_json = "1.0"
+
+[[example]]
+name = "svd2json"
+required-features = ["serde"]
