--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,9 @@ xmltree = "0.8"
 anyhow = "1.0.19"
 thiserror = "1.0.5"
 
+[dependencies.derive_builder]
+version = "0.8.1"
+
 [dependencies.serde]
 version = "1.0"
 features = ["derive"]
