--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,16 @@ version = "0.7.0"
 [features]
 derive-from = []
 unproven = []
+builder = ["derive_builder"]
 
 [dependencies]
 either = "1.5"
 xmltree = "0.8"
 failure = "0.1"
+
+[dependencies.derive_builder]
+version = "0.8.1"
+optional = true
 
 [dependencies.serde]
 version = "1.0"
