--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ name = "svd-parser"
 repository = "https://github.com/rust-embedded/svd"
 edition = "2018"
 version = "0.8.0"
+readme = "README.md"
 
 [features]
 derive-from = []
