--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,10 @@ derive-from = []
 unproven = []
 
 [dependencies]
-either = "1.5"
 xmltree = "0.8"
 anyhow = "1.0.19"
 thiserror = "1.0.5"
+rayon = "1.3.0"
 
 [dependencies.serde]
 version = "1.0"
