--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ xmltree = "0.8"
 anyhow = "1.0.19"
 thiserror = "1.0.5"
 rayon = "1.3.0"
+once_cell = "1.3.1"
+regex = "1"
 
 [dependencies.serde]
 version = "1.0"
