--- a/.github/bors.toml
+++ b/.github/bors.toml
@@ -1,7 +1,9 @@
 block_labels = ["needs-decision", "S-waiting-on-team"]
 delete_merged_branches = true
 required_approvals = 1
-status = [
-  "continuous-integration/travis-ci/push",
-]
 timeout_sec = 14400
+status = [
+  "build (1.36.0)",
+  "build (stable)",
+  "test"
+]
