port to minicom: initial

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ derive-from = []
 strict = []
 
 [dependencies]
-xmltree = "0.8"
+minidom = "0.13.0"
 anyhow = "1.0.19"
 thiserror = "1.0.5"
 rayon = "1.5.0"
