--- a/svd-parser/Cargo.toml
+++ b/svd-parser/Cargo.toml
@@ -14,31 +14,11 @@ version = "0.10.2"
 readme = "README.md"
 
 [features]
-derive-from = []
-strict = ["regex", "once_cell"]
+derive-from = ["svd-rs/derive-from"]
 
 [dependencies]
+svd-rs = { version = "0.10.2", path = "../svd-rs"}
 xmltree = "0.8"
 anyhow = "1.0.19"
 thiserror = "1.0.5"
 rayon = "1.5.0"
-
-[dependencies.regex]
-version = "1"
-optional = true
-
-[dependencies.once_cell]
-version = "1.5.2"
-optional = true
-
-[dependencies.serde]
-version = "1.0"
-features = ["derive"]
-optional = true
-
-[dev-dependencies]
-serde_json = "1.0"
-
-[[example]]
-name = "svd2json"
-required-features = ["serde"]
