--- a/svdpatch/Cargo.toml
+++ b/svdpatch/Cargo.toml
@@ -18,9 +18,9 @@ path = "src/main.rs"
 [dependencies]
 yaml-rust = "0.4"
 thiserror = "1.0"
+anyhow = "1.0.43"
 linked-hash-map = "0.5"
 globset = "0.4.8"
-regex = "1.5.4"
 commands = "0.0.5"
 svd-parser = { version = "0.10.2", path = "../svd-parser"}
 svd-encoder = { version = "0.10.2", path = "../svd-encoder"}
