--- a/svd-rs/Cargo.toml
+++ b/svd-rs/Cargo.toml
@@ -31,6 +31,7 @@ optional = true
 
 [dev-dependencies]
 serde_json = "1.0"
+svd-parser = { version = "0.10.2", path = "../svd-parser"}
 
 [[example]]
 name = "svd2json"
