--- a/svd-parser/Cargo.toml
+++ b/svd-parser/Cargo.toml
@@ -21,3 +21,10 @@ svd-rs = { version = "0.11.0", path = "../svd-rs"}
 roxmltree = "0.14.1"
 anyhow = "1.0.19"
 thiserror = "1.0.5"
+
+[dev-dependencies]
+serde_json = "1.0"
+svd-rs = { version = "0.11.0", path = "../svd-rs", features = ["serde"] }
+
+[[example]]
+name = "svd2json"
