--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -4,7 +4,8 @@ license = "MIT OR Apache-2.0"
 name = "svd-tests"
 repository = "https://github.com/rust-embedded/svd"
 edition = "2018"
-version = "0.10.2"
+version = "0.11.0"
+publish = false
 
 [dependencies]
 svd-rs = { path = "../svd-rs"}
