--- a/svd-parser/Cargo.toml
+++ b/svd-parser/Cargo.toml
@@ -23,7 +23,8 @@ anyhow = "1.0.45"
 thiserror = "1.0.30"
 
 [dev-dependencies]
-serde_json = "1.0"
+serde_json = { version = "1.0", features = ["preserve_order"] }
+serde_yaml = "0.8.23"
 svd-rs = { version = "0.12.0", path = "../svd-rs", features = ["serde"] }
 
 [[example]]
