--- a/svd-encoder/Cargo.toml
+++ b/svd-encoder/Cargo.toml
@@ -8,12 +8,13 @@ keywords = ["CMSIS", "SVD", "encoder"]
 license = "MIT OR Apache-2.0"
 name = "svd-encoder"
 repository = "https://github.com/rust-embedded/svd"
-edition = "2018"
+edition = "2021"
+rust-version = "1.56.0"
 version = "0.13.1"
 readme = "README.md"
 
 [dependencies]
-svd-rs = { version = "0.13.1", path = "../svd-rs"}
+svd-rs = { version = "0.13.1", path = "../svd-rs" }
 thiserror = "1.0.30"
 
 [dependencies.xmltree]
