--- a/svd-rs/Cargo.toml
+++ b/svd-rs/Cargo.toml
@@ -8,7 +8,8 @@ keywords = ["CMSIS", "SVD"]
 license = "MIT OR Apache-2.0"
 name = "svd-rs"
 repository = "https://github.com/rust-embedded/svd"
-edition = "2018"
+edition = "2021"
+rust-version = "1.56.0"
 version = "0.13.2"
 readme = "README.md"
 
