--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,15 +9,19 @@ name: Continuous Integration
 jobs:
   # check if the project builds with MSRV, stable and nighly
   build:
+    name: "Build (${{ matrix.name || matrix.rust }})"
     runs-on: ubuntu-latest
     continue-on-error: ${{ matrix.experimental || false }}
     strategy:
       matrix:
-        rust: [ 1.58.0, stable ]
+        rust: [ stable ]
         include:
           # Test nightly but don't fail the build.
           - rust: nightly
             experimental: true
+          # MSRV
+          - rust: 1.58.0
+            name: "MSRV"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
