deny warnings on check and run clippy afterwards

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,15 @@ on:
 name: Continuous Integration
 
 jobs:
+  ci:
+    name: CI
+    runs-on: ubuntu-latest
+    needs: [build, test, test-strict]
+    if: always()
+    steps:
+      - name: Done
+        run: jq --exit-status 'all(.result == "success")' <<< '${{ toJson(needs) }}'
+
   # check if the project builds with MSRV, stable and nighly
   build:
     name: "Build (${{ matrix.name || matrix.rust }})"
@@ -30,6 +39,9 @@ jobs:
         with:
           toolchain: ${{ matrix.rust }}
           components: clippy
+      - run: cargo check
+        env:
+          RUSTFLAGS: -D warnings
       - run: cargo clippy
 
   test:
