--- a/svd-rs/Cargo.toml
+++ b/svd-rs/Cargo.toml
@@ -9,7 +9,7 @@ license = "MIT OR Apache-2.0"
 name = "svd-rs"
 repository = "https://github.com/rust-embedded/svd"
 edition = "2021"
-rust-version = "1.61.0"
+rust-version = "1.65.0"
 version = "0.14.7"
 readme = "README.md"
 
@@ -20,7 +20,7 @@ derive-from = []
 thiserror = "1.0.31"
 
 [dependencies.regex]
-version = "=1.9.6"
+version = "1.10"
 
 [dependencies.once_cell]
 version = "1.17.2"
