--- a/svd-encoder/Cargo.toml
+++ b/svd-encoder/Cargo.toml
@@ -13,8 +13,7 @@ readme = "README.md"
 
 [dependencies]
 convert_case = "0.6.0"
-svd-rs = { repository = "https://github.com/romancardenas/svd.git" } # TODO use crates.io
-# svd-rs = { version = "0.14.7", path = "../svd-rs" }
+svd-rs = { version = "0.14.7", path = "../svd-rs" }
 thiserror = "1.0.31"
 
 [dependencies.xmltree]
