--- a/svd-parser/Cargo.toml
+++ b/svd-parser/Cargo.toml
@@ -17,6 +17,7 @@ readme = "README.md"
 [features]
 derive-from = ["svd-rs/derive-from"]
 expand = ["derive-from"]
+unstable-riscv = ["svd-rs/unstable-riscv"]
 
 [dependencies]
 svd-rs = { version = "0.14.7", path = "../svd-rs" }
