Make the URL for the submodule valid
CMSIS-SVD repository was moved plus git:// makes the git command hang.

[Recent
change](https://github.com/NixOS/nixpkgs/commit/5cd869caa4ea1bf1bde71731ecc96b24e1bdcc2d)
in the Rust platform in `NixOS/nixpkgs` prevents a user from
packaging a Rust program using crates from this repository to be
used as dependencies as it forces their submodules to be checked out,
regardless of the `submodule.*.update` setting.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "cmsis-svd"]
 	path = cmsis-svd
-	url = git://github.com/posborne/cmsis-svd.git
+	url = https://github.com/cmsis-svd/cmsis-svd.git
 	update = none
