--- a/svd-encoder/Cargo.toml
+++ b/svd-encoder/Cargo.toml
@@ -15,6 +15,9 @@ readme = "README.md"
 convert_case = "0.6.0"
 svd-rs = { version = "0.14.12", path = "../svd-rs" }
 thiserror = "1.0.31"
+# This is a transitive dep introduced by XML tree,
+# but we need to pin to this version to support our current MSRV of 1.70.0
+indexmap = "=2.11.4"
 
 [dependencies.xmltree]
 version = "0.11.0"
